packages/react-native/cpp/derec_ffi.h

typedef struct DeRecError {
  int32_t category;
  int32_t code;
  /**
   * Owned C string. Null on success. Released by [`derec_free_error`].
   */
  char *message;
  /**
   * Valid when `code == DEREC_CODE_NON_OK_STATUS`.
   */
  int32_t peer_status;
  /**
   * Owned C string. Null when not applicable. Released by [`derec_free_error`].
   */
  char *peer_memo;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t expected;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t got;
} DeRecError;
typedef struct DeRecBuffer {
  uint8_t *ptr;
  size_t len;
} DeRecBuffer;
typedef struct ProtectSecretResult {
  struct DeRecError error;
  /**
   * Committed shares in the format documented at the module level.
   */
  struct DeRecBuffer shares_wire_bytes;
} ProtectSecretResult;
typedef struct ProduceStoreShareRequestMessageResult {
  struct DeRecError error;
  struct DeRecBuffer wire_bytes;
} ProduceStoreShareRequestMessageResult;
/**
 * `committed_share_bytes` is the serialized [`CommittedDeRecShare`] the
 * helper should persist locally for later recovery responses.
 */
typedef struct ProduceStoreShareResponseMessageResult {
  struct DeRecError error;
  struct DeRecBuffer wire_bytes;
  struct DeRecBuffer committed_share_bytes;
  uint64_t secret_id;
  uint32_t version;
} ProduceStoreShareResponseMessageResult;
typedef struct ProcessStoreShareResponseMessageResult {
  struct DeRecError error;
} ProcessStoreShareResponseMessageResult;
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProtectSecretResult protect_secret(uint64_t secret_id,
                                          const uint8_t *secret_data_ptr,
                                          size_t secret_data_len,
                                          const uint64_t *channels_ptr,
                                          size_t channels_len,
                                          size_t threshold,
                                          uint32_t version);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProduceStoreShareRequestMessageResult produce_store_share_request_message(uint64_t channel_id,
                                                                                 uint32_t version,
                                                                                 uint64_t secret_id,
                                                                                 const uint8_t *committed_share_ptr,
                                                                                 size_t committed_share_len,
                                                                                 const uint32_t *keep_list_ptr,
                                                                                 size_t keep_list_len,
                                                                                 const uint8_t *description_ptr,
                                                                                 size_t description_len,
                                                                                 const uint8_t *shared_key_ptr,
                                                                                 size_t shared_key_len,
                                                                                 const uint8_t *reply_to_ptr,
                                                                                 size_t reply_to_len);
/**
 * `request_proto_ptr` / `request_proto_len` must be the `request_proto_bytes`
 * returned by [`extract_store_share_request`].
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProduceStoreShareResponseMessageResult produce_store_share_response_message(uint64_t channel_id,
                                                                                   const uint8_t *request_proto_ptr,
                                                                                   size_t request_proto_len,
                                                                                   const uint8_t *shared_key_ptr,
                                                                                   size_t shared_key_len);
/**
 * `response_proto_ptr` / `response_proto_len` must be the
 * `response_proto_bytes` returned by [`extract_store_share_response`].
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProcessStoreShareResponseMessageResult process_store_share_response_message(uint32_t version,
                                                                                   const uint8_t *response_proto_ptr,
                                                                                   size_t response_proto_len);